# photobot

./: .gitignore  README.md
frontend/: Makefile  compose.yml  index.html  package.json  tsconfig.app.json
frontend/src/: index.css
frontends/: .gitignore  Dockerfile  README.md  biome.json  default.conf  vite.config.ts  vitest.config.ts
frontends/admin-panel/: .dockerignore  .gitignore  Dockerfile  README.md  biome.json  compose.env.example  (+5 more)
services/correlation-service/: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  compose.yml  env.example  pyproject.toml  ruff.toml
services/correlation-service/.github/workflows/: env-contract-check.yml  ruff-lint.yml
services/correlation-service/app/: main.py
services/correlation-service/app/api/v1/: router.py
services/correlation-service/app/api/v1/endpoints/: correlation.py
services/correlation-service/app/auth/: manager.py  validator.py
services/correlation-service/app/clients/: analysis.py
services/correlation-service/app/core/: config.py  logging.py  observability.py
services/correlation-service/app/models/: correlation.py
services/correlation-service/app/services/: condition_extractor.py  condition_tester.py  correlation.py  data_processor.py  feature_selector.py  ml_engine.py
services/correlation-service/scripts/: get_token.sh
services/correlation-service/tests/: __init__.py  conftest.py  test_api_correlation.py  test_condition_extractor.py  test_condition_tester.py  test_correlation_service.py  test_data_processor.py  test_feature_selector.py  test_ml_engine.py  test_models.py
(+931 files in other folders)
