[project]
name = "correlation-service"
version = "0.1.0"
description = "Standalone service to calculate object correlations based on attributes"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.11,<4.0",
    "fastapi>=0.115,<1.0",
    "numpy>=2.2,<3.0",
    "opentelemetry-exporter-otlp-proto-http>=1.28,<2.0",
    "opentelemetry-instrumentation-aiohttp-client>=0.49b0,<1.0",
    "opentelemetry-instrumentation-fastapi>=0.49b0,<1.0",
    "opentelemetry-sdk>=1.28,<2.0",
    "pydantic>=2.11,<3.0",
    "pydantic-settings>=2.7",
    "python-dotenv>=1.0,<2.0",
    "scikit-learn>=1.6,<2.0",
    "uvicorn[standard]>=0.34,<1.0",
    "PyJWT[crypto]>=2.10",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.8",
]

[project.scripts]
correlation-service = "app.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"] 


[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
